# ISEP-COGSI

./: README.md
CA1/: README.md
CA1/tut-restProj/nonrest/src/main/java/payroll/: Employee.java  LoadDatabase.java
CA1/tut-restProj/nonrest/src/test/java/payroll/: EmployeeTest.java
CA2/: README.md
CA2/AlternativaCA2/tut-restProj-Alternativa/: WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-tut-restProj-Alternativa  maven_install.json
CA2/AlternativaCA2/tut-restProj-Alternativa/norest/: BUILD  run_payroll_app.sh
CA2/AlternativaCA2/tut-restProj-Alternativa/norest/src/integrationTest/java/com/payroll/: PayrollApplicationTest.java
CA2/AlternativaCA2/tut-restProj-Alternativa/norest/src/main/java/com/payroll/: Employee.java  EmployeeController.java  EmployeeNotFoundAdvice.java  LoadDatabase.java  PayrollApplication.java
CA2/AlternativaCA2/tut-restProj-Alternativa/norest/src/test/java/com/payroll/: EmployeeTest.java
CA2/gradle_basic_demo-main/: build.gradle
CA2/gradle_basic_demo-main/src/main/java/basic_demo/: ChatClient.java
CA2/gradle_basic_demo-main/src/test/java/basic_demo/: ChatClientTest.java
CA2/tutRestGradle/: settings.gradle
CA2/tutRestGradle/nonrest/: build.gradle
CA2/tutRestGradle/nonrest/src/integrationTest/java/payroll/: PayrollApplicationTest.java
CA2/tutRestGradle/nonrest/src/main/java/payroll/: Employee.java  LoadDatabase.java
CA2/tutRestGradle/nonrest/src/main/resources/: application.properties
CA3/: README.md  Vagrantfile
CA3/solucao_alternativa/: ca3-part2.pkr.hcl  main.pkr.hcl
CA3/solucao_alternativa/http/: preseed.cfg
CA3/solucao_alternativa/script/: provision.sh  update.sh
CA4/: README.md
CA4/AlternativeSolution-Puppet/: Vagrantfile
CA4/AlternativeSolution-Puppet/manifests/: install_and_configure_machine.pp  provision_h2database.pp  provision_restservice.pp
CA4/MainSolution/: Vagrantfile  h2.service  install_and_configure_machine.yml  inventory.ini  nonrest.service  provision_h2database.yml  provision_restservice.yml
CA5/: README.md
CA5/Part1-Version1/: chatserver.Dockerfile  chatserver_otimizado.Dockerfile  id_ed25519  nonrest.Dockerfile  nonrest_otimizado.Dockerfile
CA5/Part1Ver2Chat/: Dockerfile
CA5/Part1Ver2TutRest/: Dockerfile
CA5/Part2/: compose.yaml  db.Dockerfile  web.Dockerfile
CA5/alternative_solution/part1/version1/: chatserver_version1.bash  chatserver_version1_optimized.bash  nonrest_version1_optimized.bash
CA5/alternative_solution/part1/version2/: chatserver_version2.bash
CA6/: README.md
CA6/Part1/: Jenkinsfile  Vagrantfile
CA6/Part1/ansible/inventory/: inventory.ini  inventory_jenkins.ini
CA6/Part1/ansible/playbooks/: deploy.yml  install_and_configure_machine.yml  provision_blue.yml  provision_green.yml  rollback.yml
CA6/Part1/ansible/services/: nonrest.service  nonrestjar.j2
CA6/Part2/: Dockerfile  Jenkinsfile  Vagrantfile
CA6/Part2/ansible/inventory/: inventory.ini  inventory_jenkins.ini
CA6/Part2/ansible/playbooks/: deployment.yml
alternative_solution/part1/version1/: nonrest_version1.bash
alternative_solution/part1/version2/: nonrest_version2.bash
alternative_solution/part2/: db.bash  deployment.yml  web.bash
